--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,7 +1,17 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background:#ddd;
+  display: flex;
+  justify-content: center;
+}
+
 .App {
   padding: 60px;
+  background: white;
   display: flex;
-  margin: 100px auto;
+  margin: 20px;
   flex-direction: column;
   padding: 60px;
   border: 1px solid rgba(#ddd, 0.5);
@@ -29,8 +39,3 @@
 
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
