--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,18 +2,23 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background:#ddd;
+
+  background: linear-gradient(0deg, rgba(133,144,170,1) 0%, rgba(196,219,246,1) 15%, rgba(59,139,235,1) 100%);
+  height: 100vh;
   display: flex;
   justify-content: center;
 }
 
-.App {
-  padding: 60px;
+*{
+  box-sizing: border-box
+}
+
+.Wrapper {
   background: white;
   display: flex;
   margin: 20px;
   flex-direction: column;
-  padding: 60px;
+  padding: 40px 30px;
   border: 1px solid rgba(#ddd, 0.5);
   border-radius: 5px;
   box-shadow: 0px 7px 10px rgba(#000, 0.3);
