--- a/src/components/Results/Results.module.scss
+++ b/src/components/Results/Results.module.scss
@@ -1,14 +1,26 @@
-.Wrapper{
+.Wrapper {
 
-    li{
+    li {
         list-style: none;
         display: flex;
         width: 100%;
         justify-content: space-between;
-        border-bottom: 1px solid black;
+        border-bottom: 1px solid rgba(#000, 0.5);
         padding-top: 10px;
+        margin-bottom: 10px;
     }
-    .symbol{
+    p{
+        margin-top:50px;
+        text-align: center;
+    }
 
-    }
+}
+
+.Symbol {
+    font-size: 14px;
+    align-self: flex-end;
+}
+
+.Digits {
+    font-size: 20px;
 }
