--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,21 +2,25 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-
-  background: linear-gradient(0deg, rgba(133,144,170,1) 0%, rgba(196,219,246,1) 15%, rgba(59,139,235,1) 100%);
+  background: linear-gradient(
+    0deg, rgba(133, 144, 170, 1) 
+    0%, rgba(196, 219, 246, 1) 
+    15%, rgba(59, 139, 235, 1) 100%
+    );
   height: 100vh;
   display: flex;
   justify-content: center;
 }
 
-*{
+* {
   box-sizing: border-box
 }
 
 .Wrapper {
   background: white;
+  position: relative;
   display: flex;
-  margin: 20px;
+  margin: 40px 20px;
   flex-direction: column;
   padding: 40px 30px;
   border: 1px solid rgba(#ddd, 0.5);
@@ -38,9 +42,16 @@ body {
   display: flex;
   flex-direction: row;
 
-  input[type="text"] {
-    margin-right: 10px;
-  }
-
 }
 
+.Spinner {
+  position: absolute;
+  right: 30px;
+  top: 90px;
+  z-index: 1;
+}
+
+.Error{
+  color: red;
+  font-size: 12px;
+}
