--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -21,3 +21,13 @@
 .InputField {
     position: relative;
 }
+
+
+  
+  input[type="search"] {
+      -webkit-appearance: textfield;
+  }
+  
+  input[type="search"]::-webkit-search-decoration {
+      -webkit-appearance: none;
+  }
