--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -22,7 +22,7 @@ body {
   display: flex;
   margin: 40px 20px;
   flex-direction: column;
-  padding: 40px 30px;
+  padding: 40px 30px 50px;
   border: 1px solid rgba(#ddd, 0.5);
   border-radius: 5px;
   box-shadow: 0px 7px 10px rgba(#000, 0.3);
@@ -51,14 +51,17 @@ body {
   z-index: 1;
 }
 
+.ErrorMessage{
+  position: absolute;
+  color: red;
+  bottom: 16px;
+  left: 30px;
+  font-size: 12px;
+  transition: opacity 0.3s linear;
+}
+
 .Show{
   visibility: visible;
   opacity:1
 }
 
-.ErrorMessage{
-  color: red;
-  font-size: 12px;
-  // opacity: 0;
-  transition: opacity 0.3s linear
-}
