--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,15 +1,40 @@
 body {
+
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: linear-gradient(
-    0deg, rgba(133, 144, 170, 1) 
-    0%, rgba(196, 219, 246, 1) 
-    15%, rgba(59, 139, 235, 1) 100%
-    );
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
+  position: relative;
+}
+
+.Background {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  overflow: hidden;
+  height: 100%;
+}
+
+.BgImg {
+  pointer-events: none;
+  overflow: hidden;
+  position: relative;
+  object-fit: cover;
+  object-position: 80% 65%;
+  filter: blur(3px);
+  opacity: .8;
+  margin-left: -20%;
+}
+
+@media (min-width:768px) {
+  .BgImg {
+    margin-left: 0;
+    width: 100%;
+    object-position: 50% 95%;
+  }
 }
 
 * {
@@ -20,13 +45,22 @@ body {
   background: white;
   position: relative;
   display: flex;
-  margin: 40px 20px;
   flex-direction: column;
-  padding: 40px 30px 50px;
-  border: 1px solid rgba(#ddd, 0.5);
-  border-radius: 5px;
-  box-shadow: 0px 7px 10px rgba(#000, 0.3);
+  margin: 40px 20px;
+  padding: 30px 30px 50px;
+  border: 3px solid rgb(196, 54, 47);
+  border-radius: 30px;
+  box-shadow: 0px 7px 10px rgba(#000, 0.6);
   max-width: 400px;
+}
+
+.Logo {
+  height: 70px;
+  width: auto;
+  margin-bottom: 45px;
+  left: 0;
+  top: 0;
+  z-index: 2;
 }
 
 .Form {
@@ -44,14 +78,7 @@ body {
 
 }
 
-.Spinner {
-  position: absolute;
-  right: 30px;
-  top: 90px;
-  z-index: 1;
-}
-
-.ErrorMessage{
+.ErrorMessage {
   position: absolute;
   color: red;
   bottom: 16px;
@@ -60,8 +87,7 @@ body {
   transition: opacity 0.3s linear;
 }
 
-.Show{
+.Show {
   visibility: visible;
-  opacity:1
+  opacity: 1
 }
-
